<resources>
    <string name="app_name">Github User</string>

    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="popular">Popular</string>
    <string name="repositories">Repositories</string>
    <string name="organizations">Organization</string>
    <string name="starred">Starred</string>
    <string name="notifications">Notifications</string>
    <string name="details">Details</string>
    <string name="starred_repositories">Starred Repositories</string>
    <string name="no_data_found">No Data Found</string>
    <string name="trending_now">Trending Now</string>

    <string name="app_version">Github User for mobile v1.0.00</string>

    <string name="search">Search</string>
    <string name="search_hint">Search by username</string>

    <string name="bottom_nav_txt_01">Home</string>
    <string name="bottom_nav_txt_02">Explore</string>
    <string name="bottom_nav_txt_03">Profile</string>
    <string name="bottom_nav_txt_04">Settings</string>

    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <!-- Temporary text -->
    <string name="temp_name">Name here…</string>
    <string name="temp_username">myusername</string>
    <string name="temp_company">My Company</string>
    <string name="temp_link">link.com</string>
    <string name="temp_location">My Location</string>
    <string name="temp_number">0</string>
    <string name="temp_repo_name">Repository Name</string>
    <string name="temp_repo_detail">This is repository details</string>
    <string name="temp_category_name">Category Name</string>
    <string name="temp_bio">My bio is here…</string>
    <string name="temp_email">test@gmail.com</string>
    <string name="temp_fullname">username/reponame</string>
    <string name="temp_notification_title">Here is the detail of notification</string>
    <string name="temp_days">8d</string>
    <string name="temp_programming_language">Java</string>
    <string name="temp_find_inspiration">Find project inspiration through the \"Trending Now\" feature</string>

    <string name="my_work">My Work</string>
    <string name="issues">Issues</string>
    <string name="discussions">Discussions</string>
    <string name="contribution">Contribution</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_detail">Add favorite repositories for quick access at any time, without having to search</string>
    <string name="add_repositories">Add Repositories</string>
    <string name="chartDetail">Your profile contributions graph is a record of contributions you\'ve made to GitHub repositories.</string>

    <string name="failed_text">"Failed to get data from server. Please try again."</string>

    <string name="patricia_fiona">Patricia Fiona</string>
    <string name="android_developer">Android Developer</string>
    <string name="myEmail">patriciafiona3@gmail.com</string>
</resources>